--- a/angular-project/src/app/views/controle/gastos.component.html
+++ b/angular-project/src/app/views/controle/gastos.component.html
@@ -1,6 +1,7 @@
 <mat-card *ngFor="let registro of registros" class="card mt-2">
     <mat-card-content class="card-body bg-transparent rounded">
-        <p class="m-0 p-0"><strong>Descrição: </strong>{{ registro.descricao }}</p>
+        <p class="m-0 p-0" *ngIf="registro.ativo.nome"><strong>Ativo: </strong>{{ registro.ativo.nome }}</p>
+        <p class="m-0 p-0" *ngIf="registro.descricao"><strong>Descrição: </strong>{{ registro.descricao }}</p>
         <p><strong>Valor: </strong>
             <strong *ngIf="registro.tipo == 'pago'" class="text-success">{{ registro.valor  | currency:'BRL':true }}</strong>
             <strong *ngIf="registro.tipo == 'gasto'" class="text-danger">{{ registro.valor  | currency:'BRL':true }}</strong>
